# leaderboard_crypto

./: .gitignore  LICENSE  README.md  deploy.sh  docker-compose.yml
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 00000001_create_user_pnl.sql
backend/src/: db.rs  handlers.rs  main.rs
backend/src/handlers/: errors.rs  models.rs
frontend/: .dockerignore  .env.local.example  .gitignore  Dockerfile  build-docker.sh  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/health/: route.ts
frontend/app/api/leaderboard/: route.ts
frontend/app/components/: LeaderboardTable.tsx  TimeframeSelector.tsx  TraderModal.tsx
frontend/src/components/: Leaderboard.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: index.tsx
frontend/src/pages/api/: leaderboard.ts
rust-backend/: .gitignore  Cargo.toml  Dockerfile  setup.sh
rust-backend/migrations/: 001_create_traders.sql  002_create_trader_performance.sql  003_create_materialized_view.sql
rust-backend/src/: cache.rs  main.rs  models.rs  schema.rs  websocket.rs
rust-backend/src/repository/: leaderboard_repo.rs
