[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }        # ✅ kompatibel
tokio = { version = "1.0", features = ["full"] }         # ✅ kompatibel
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls"] } # ✅
serde = { version = "1.0", features = ["derive"] }       # ✅ kompatibel
serde_json = "1.0"                                       # ✅ kompatibel
thiserror = "1.0"                                        # ✅ kompatibel
tracing = "0.1"                                          # ✅ kompatibel
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # ✅
async-graphql = { version = "7.0", features = ["apollo_tracing"] } # ✅
async-graphql-axum = "7.0"                               # ✅ kompatibel