[package]
name = "leaderboard-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.7"
actix-ws = "0.2"
actix-rt = "2.9"
async-graphql = "6.0"
async-graphql-actix-web = "6.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono", "bigdecimal", "migrate"] }
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
bigdecimal = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
redis = { version = "0.23", features = ["tokio-comp"] }
prometheus = "0.13"
futures-util = "0.3"

[dev-dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "offline"] }